better image width on bigger screens avoid empty space in the middle fill it with image stretching from rigth to center component refactoring

--- a/src/scss/1_components/about/_about.scss
+++ b/src/scss/1_components/about/_about.scss
@@ -1,9 +1,5 @@
 .about {
   position: relative;
-  padding-top: 2.4rem;
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-  padding-bottom: 3.2rem;
 
   &__heading {
     font-family: $text-display;
